[package]
name = "stack_replace"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "simple container cli and lib!"
homepage = "https://github.com/wszxl516/replace_stack.git"
repository = "https://github.com/wszxl516/replace_stack.git"


[[bin]]
name = "stack_replace"
path = "src/bin/main.rs"

[lib]
name = "stack_replace"
path = "src/lib.rs"
plugin = false
proc-macro = false
harness = true
